[package]
name = "c3-lang-macro"
version = "0.1.0"
edition = "2018"
authors = ["Maciej Zieliński <maciej@odra.dev>"]
description = "C3 Lang macro."
homepage = "https://odra.dev"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
c3-lang-parser = { version = "0.1.0", path = "./../c3-lang-parser" }
quote = "1"
proc-macro2 = "1"
syn = { version = "1", features = ["full"] }
