[package]
name = "c3-lang-parser"
version = "0.0.4"
edition = "2018"
authors = ["Maciej Zieliński <maciej@odra.dev>"]
description = "Implementation of C3 Lang."
homepage = "https://odra.dev"
license = "MIT"

[dependencies]
c3-lang-linearization = { version = "0.0.4", path = "./../c3-lang-linearization" }
quote = "1"
syn = { version = "1", features = ["full", "extra-traits"] }
proc-macro2 = "1"

[dev-dependencies]
pretty_assertions = "1.2"
